# okapi

./: .gitignore  .gitmodules  Cargo.toml  LICENCE  README.md  package-lock.json  package.json
acorn-test/: index.js  (+2 more)
crates/hippo_js_parser/: Cargo.toml  package-lock.json  package.json
crates/hippo_js_parser/scripts/: generate-acorn-test-fixtures.ts  generate-hippo-test-fixtures.ts
crates/hippo_js_parser/src/: config.rs  errors.rs  lexer.rs  lib.rs  main.rs  tokens.rs  utils.rs
crates/hippo_js_parser/src/ast/: declaration.rs  expression.rs  node.rs  pattern.rs  scripts_and_modules.rs  statement.rs
crates/hippo_js_parser/src/lexer/: char.rs  char_extensions.rs  char_utils.rs  identifiers.rs  lexer.rs  mod.rs  numbers.rs  punctuators.rs  regex.rs  regular_expression.rs  scanner.rs  strings.rs  template_literal.rs  tests.rs  utils.rs
crates/hippo_js_parser/src/parser/: expression.rs  functions_and_classes.rs  mod.rs  params.rs  parser.rs  statement.rs  tests.rs
crates/hippo_js_parser/tests/: mod.rs  simple_variable_assignment.rs  test262.rs
crates/hippo_js_parser/tests/lexer/: common.rs  identifiers.rs  keywords_and_identifiers.rs  mod.rs  numbers.rs  punctuators.rs  regex.rs  regular_expression.rs  simple_numeric_literals.rs  simple_string_literals.rs  simple_variable_assignment.rs  strings.rs  template_literal.rs  utils.rs  whitespace.rs
crates/hippo_js_parser/tests/parser/: acorn.rs  array_assignment_target.rs  array_assignment_target_rest.rs  array_binding.rs  array_binding_rest.rs  array_element_in_expr.rs  array_expr.rs  array_expression.rs  arrow_expr_in_alternate.rs  arrow_expr_single_param.rs  arrow_expression_in_alternate.rs  arrow_expression_single_param.rs  assign_eval_member_or_computed_expr.rs  assign_eval_member_or_computed_expression.rs  assign_expr.rs  assign_expression.rs  assignment_expression.rs  assignment_shorthand_prop_with_initializer.rs  assignment_target.rs  async_arrow_expr.rs  async_arrow_expression.rs  async_continue_statement.rs  async_continue_stmt.rs  async_function_expr.rs  async_function_expression.rs  async_ident.rs  binary_expression.rs  bom_character.rs  call_arguments.rs  class_declaration.rs  class_decorator.rs  class_named_abstract_is_valid_in_js.rs  common.rs  computed_member_expression.rs  computed_member_in.rs  computed_member_name_in.rs  conditional_expr.rs  conditional_expression.rs  debugger_statement.rs  declarations.rs  (+99 more)
crates/hippo_napi/: Cargo.toml  hippo_napi.darwin-arm64.node  index.js  package.json
crates/hippo_napi/src/: lib.rs
napi/hippo_parser/: Cargo.toml  index.d.ts  index.js  package.json
napi/hippo_parser/__test__/: index.spec.mjs
napi/hippo_parser/npm/darwin-x64/: README.md  package.json
napi/hippo_parser/npm/linux-x64-gnu/: README.md  package.json
napi/hippo_parser/npm/win32-x64-msvc/: README.md  package.json
napi/hippo_parser/src/: lib.rs
(+571 files in other folders)
