[workspace]
resolver = "2"
members = ["crates/*", "napi/hippo_parser"]

[workspace.package]
version = "0.0.1"
license = "MIT"
edition = "2021"

[workspace.dependencies]
hippo_estree = { path = "crates/hippo_estree" }
hippo_js_parser = { path = "crates/hippo_js_parser" }
hippo_unicode = { path = "crates/hippo_unicode" }
hippo_wasm = { path = "crates/hippo_wasm" }
