[package]
name = "hippo_js_parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hippo_estree = { workspace = true }
hippo_unicode = { workspace = true }
serde_json = "1.0.111"

[dev-dependencies]
pretty_assertions = "1.4.0"
serde_yaml = "0.9.30"
serde = { version = "1.0.193", features = ["derive"] }
test-case-macros = "3.3.1"
