[package]
name = "hippo_js_parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hippo_unicode = { workspace = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
assert-json-diff = "2.0.2"
pretty_assertions = "1.4.0"
test-case = "3.3.1"
